cover rxjs topic day3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
   <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar-header">
+        <a class="badge badge-secondary" *ngIf="subscribe">Subscribe</a>
         <a class="navbar-brand" href="#">Rxjs Series</a>
       </div>
       <ul class="nav navbar-nav">
@@ -12,7 +13,9 @@
         <li><a routerLink="/custom-obs">Custom-obs</a></li>
         <li><a routerLink="/pluck">pluck</a></li>
         <li><a routerLink="/Todo-demo">Todo-demo</a></li>
-
+        <li><a routerLink="/Take">Take, Take last and Take until-opraters</a></li>
+        <li><a routerLink="/retry">retry</a></li>
+        <li><a routerLink="/subject">subject</a></li>
       </ul>
     </div>
   </nav>
