--- a/src/app/from-event/from-event.component.html
+++ b/src/app/from-event/from-event.component.html
@@ -6,4 +6,4 @@
         <img [src]="data.avatar_url" style="width: 50px; border-radius: 50%;"/>
         <h3>{{data.login}}</h3>
     </div>
-</div>ddd
+</div>
