rxjs topic day4

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,10 @@
         <li><a routerLink="/Take">Take, Take last and Take until-opraters</a></li>
         <li><a routerLink="/retry">retry</a></li>
         <li><a routerLink="/subject">subject</a></li>
+        <li><a routerLink="/debounce-time">debounce-time</a></li>
+        <li><a routerLink="/replay-subject">replay-subject</a></li>
+        <li><a routerLink="/async-subject">replay-subject</a></li>
+
       </ul>
     </div>
   </nav>
