--- a/src/app/comman-component/comp2/comp2.component.html
+++ b/src/app/comman-component/comp2/comp2.component.html
@@ -2,6 +2,6 @@
     <div class="card-body">
       <h5 class="card-title">Component 2</h5>
       <input type="text" class="from-control" #name>
-      <button class="btn btn-primary md-2" (click)="onChange(name)">Submit</button>
+      <button class="btn btn-primary md-2" (click)="onChange(name)">Fetch Data</button>
     </div>
   </div>
