--- a/src/app/tap/tap.component.html
+++ b/src/app/tap/tap.component.html
@@ -7,3 +7,9 @@
         </ul>
     </div>
 </div>
+
+<!-- Observable has three callback functions
+
+next() :- calls when observable changes value.
+complete() :- calls when observable completes.
+error() :- calls when observable throws an error. -->
