--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container">
       <div class="navbar-header">
-        <a class="badge badge-secondary" *ngIf="subscribe">Subscribe</a>
+        <!-- <a class="badge badge-secondary" *ngIf="subscribe">Subscribe</a> -->
         <a class="navbar-brand" href="#">Rxjs Series</a>
       </div>
       <ul class="nav navbar-nav">
@@ -18,8 +18,14 @@
         <li><a routerLink="/subject">subject</a></li>
         <li><a routerLink="/debounce-time">debounce-time</a></li>
         <li><a routerLink="/replay-subject">replay-subject</a></li>
-        <li><a routerLink="/async-subject">replay-subject</a></li>
-
+        <li><a routerLink="/async-subject">Async-subject</a></li>
+        <li><a routerLink="/generate-operator">generate-operator</a></li>
+        <li><a routerLink="/ajex-operator">Ajex</a></li>
+        <li><a routerLink="/iif-operator">iif</a></li>
+        <li><a routerLink="/concat-operator">concat-operator</a></li>
+        <li><a routerLink="/merge-operator">merge-operator</a></li>
+        <li><a routerLink="/combine-latest-operator">combine-latest-operator</a></li>
+        <li><a routerLink="/concat-map-operator">concat-map-operator</a></li>
       </ul>
     </div>
   </nav>
