--- a/src/app/async-subject/async-subject.component.html
+++ b/src/app/async-subject/async-subject.component.html
@@ -1,1 +1,27 @@
-<p>async-subject works!</p>
+<strong>async-subject works!</strong>
+<hr>
+<strong><span class="center">Add Video</span></strong>
+<!-- <button class="btn btn-success" (click)="toggleData()">Api Data</button> -->
+<div class="row-justify-content center">
+    <div class="row">
+        <div class="col-md-4">
+        <input type="text" class="form-control" #tempData>
+        </div>
+        <div class="col-md-3">
+        <button class="btn btn-primary" (click)="addVideo(tempData)">Add Video</button>
+        </div>
+        <hr>
+    </div>
+ 
+    <div class="row">
+    <div class="col-md-4">
+        <strong>User 1</strong>
+        <hr>
+        <ul class="video-list" *ngFor="let item of result">
+            <li>video:{{item}}</li>
+        </ul>
+    </div>
+        <button class="btn"
+        [ngClass]="btnSubmod1 ? 'btn-danger' : 'btn-success'" (click)="Oncomplete()">{{ btnSubmod1 ? 'UnSubscription' : 'Subscription' }}</button>
+    </div>  
+</div>
