--- a/src/app/debounce-time-distinct-until-changed/debounce-time-distinct-until-changed.component.html
+++ b/src/app/debounce-time-distinct-until-changed/debounce-time-distinct-until-changed.component.html
@@ -1,4 +1,4 @@
-<p>debounce-time-distinct-until-changed works!</p>
+<!-- <p>debounce-time-distinct-until-changed works!</p>
 <div>
 <div class="col-md-6" >
     <strong><span class="text-primary">Debounce-time</span></strong>
@@ -11,4 +11,4 @@
     <strong><span class="text-danger">Distinct-until-changed</span></strong>
     <input type="search" class="form-control rounded" placeholder="Search" #myInput2 />
     <strong *ngIf="result2!=''">Result data:<span class="text-danger">{{result2}}</span></strong>
-</div>
+</div> -->
