--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container">
       <div class="navbar-header">
-        <!-- <a class="badge badge-secondary" *ngIf="subscribe">Subscribe</a> -->
+        <button type="button" class="btn btn-success" *ngIf="subscribe">subscribe</button>
         <a class="navbar-brand" href="#">Rxjs Series</a>
       </div>
       <ul class="nav navbar-nav">
@@ -25,7 +25,9 @@
         <li><a routerLink="/concat-operator">concat-operator</a></li>
         <li><a routerLink="/merge-operator">merge-operator</a></li>
         <li><a routerLink="/combine-latest-operator">combine-latest-operator</a></li>
-        <li><a routerLink="/concat-map-operator">concat-map-operator</a></li>
+        <li><a routerLink="/concat-map">concat-map-operator</a></li>
+        <li><a routerLink="/merge-map">merge-map-operator</a></li>
+        <li><a routerLink="/demo">demo-operator</a></li>
       </ul>
     </div>
   </nav>
