--- a/src/app/subject/subject.component.html
+++ b/src/app/subject/subject.component.html
@@ -23,6 +23,6 @@
             </table>
         </div>
 </div>
-<!-- <div class="col-md-4">
+<div class="col-md-4">
     <app-comp3></app-comp3>
-</div> -->
+</div>
